--- a/serial/CMakeLists.txt
+++ b/serial/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.24)
-project(serial C)
+project(fft_serial C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "-O3")
 
 include_directories(.)
 
-add_executable(serial
-        fft.c)
+add_executable(fft_serial
+        fft_serial.c)
 
-target_link_libraries(serial PRIVATE m)
+target_link_libraries(fft_serial PRIVATE m)
