Moved FFT code into its own module.

--- a/serial/CMakeLists.txt
+++ b/serial/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_C_FLAGS "-O3")
 include_directories(.)
 
 add_executable(fft_serial
-        fft_serial.c)
+        fft_serial.c
+        fft.h
+        fft.c)
 
 target_link_libraries(fft_serial PRIVATE m)
