--- a/openmp/CMakeLists.txt
+++ b/openmp/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 set(CMAKE_PROJECT_NAME  "fft_openmp")
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_FLAGS "-O3")
+set(CMAKE_C_FLAGS "-O3 -fopenmp")
 
 # Comment the line below to disable printing.
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
