OpenMP iterative implementation.

--- a/openmp/CMakeLists.txt
+++ b/openmp/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "-O3 -fopenmp")
 
 # Comment the line below to disable printing.
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
+#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
 
 project(${CMAKE_PROJECT_NAME} C)
 
